# AAuthOS

./: ARCHIT~1.MD  BLOG.md  ENV~1.EXA  GITIGN~1  Makefile  README.md  aauth-platform-prd.md
MANIFE~1/: 00-namespaces.yaml
MANIFE~1/agentgateway/: 01-agentgateway.yaml
MANIFE~1/keycloak/: 01-keycloak-values.yaml  02-keycloak-realm-import.yaml  README.md
MANIFE~1/platform/: 01-registry-service.yaml  02-mission-service.yaml  03-operator-console.yaml
MANIFE~1/radiantlogic/: 01-radiantlogic-values.yaml  02-token-exchange-config.yaml  README.md
MANIFE~1/workloads/: 01-backend.yaml  02-supply-chain-agent.yaml  03-market-analysis-agent.yaml  04-frontend.yaml
docs/: IDP_TOGGLE.md  INSTALL.md  MISSION_LIFECYCLE.md  OPERATOR_CONSOLE.md  RUN_ON_YOUR_MACHINE.md  local-demo-transcript.txt
kind/: kind-cluster.yaml
platform/: README.md  run_local_demo.py
platform/OPERAT~1/: app.js  index.html  server.py
platform/mission-service/: Dockerfile  main.py  pyproject.toml
platform/operator-console/: Dockerfile  app.js  index.html
platform/registry-service/: Dockerfile  main.py  pyproject.toml
scripts/: 00-kind-up.sh  01-deploy-radiantlogic.sh  02-deploy-keycloak.sh  03-deploy-platform.sh  04-deploy-agentgateway.sh  05-register-agents.sh  06-deploy-apps.sh  07-run-demo.sh  99-teardown.sh  preflight.sh
sdk/integration/: README.md  backend.md  market-analysis-agent.md  supply-chain-agent.md
sdk/integration/patches/: apply_patches.py
sdk/python/: README.md  pyproject.toml
sdk/python/aauth_sdk/: __init__.py  agent.py  client.py  config.py  enrollment.py  keys.py  mission.py  server.py  signing.py  token_exchange.py  verification.py
