[project]
name = "aauth-sdk"
version = "0.1.0"
description = "AAuth Mission Platform client SDK — enrollment, RFC 9421 signing, mission_id propagation, RFC 8693 token exchange"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.7",
  "cryptography>=42",
  "PyJWT[crypto]>=2.8",
  "structlog>=24.1",
  "opentelemetry-api>=1.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aauth_sdk*"]
